fixing the issue with path has a tiny bit of stroke left behind after dash offset is set

--- a/components/weather-spinner/animations/Cloudy/cloudy.module.css
+++ b/components/weather-spinner/animations/Cloudy/cloudy.module.css
@@ -29,7 +29,7 @@
     transform: scale(3.62);
 }
 .cloudy-circle{
-    background-color: "#5300d4";
+    background-color: #5300d4;
     width: 10px;
     height: 10px;
     transform: scale(0);
